--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-datepicker": "^6.9.0",
     "react-day-picker": "^8.10.1",
+    "react-daypicker": "^3.0.10",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
@@ -66,6 +68,7 @@
     "@tanstack/react-query-devtools": "^5.29.2",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "@types/react-query": "^1.2.9",
     "eslint": "^8",
