--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
